# image_editor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
image_editor/: __init__.py  cli.py  gui.py  settings.py
image_editor/operations/: __init__.py  background.py  convert.py  crop.py  face.py  resize.py
image_editor/utils/: __init__.py  backup.py  batch.py
rules/: README.md  drivers_license.json  mynumber_card.json  passport_photo.json  resume_photo.json
tests/: __init__.py  conftest.py  test_background.py  test_backup.py  test_batch.py  test_cli.py  test_convert.py  test_crop.py  test_e2e.py  test_face.py  test_integration.py  test_resize.py  test_settings.py
